--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,13 +7,18 @@
 	<!-- Nome da Aplicação -->
 	<display-name>PDV</display-name>
 
-	<!-- Tema do Prime Faces 
+	<context-param>
+		<param-name>javax.faces.PROJECT_STAGE</param-name>
+		<param-value>Development</param-value>
+	</context-param>
+
+	<!-- Tema do Prime Faces -->
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
 		<param-value>bootstrap</param-value>
 	</context-param>
-	
-	-->
+
+
 
 	<!-- Configuração do JSF -->
 	<servlet>
